#+title: Swinfo change log
#+author: iseeu
#+date: 2021-07-01 06:51:44 +0300

* Change log

** Unreleased

- Fix an error when trying to get a Unix tool info.

** Version 0.0.1 (2021-07-01)

- Initial public version.