@@ -7,6 +7,8 @@
 ** Unreleased
 
 - Fix an error when trying to get a Unix tool info.
+- Rename swinfo-yank-info to swinfo-kill-info.
+  - And update readme accordingly.
 
 ** Version 0.0.1 (2021-07-01)
 
